tests/baselines/reference/computedPropertyNames46_ES6.errors.txt
computedPropertyNames46_ES6.ts(2,6): error TS2873: This kind of expression is always falsy.


==== computedPropertyNames46_ES6.ts (1 errors) ====
    var o = {
        ["" || 0]: 0
         ~~
!!! error TS2873: This kind of expression is always falsy.
    };